added endpoint PUT/sensors/warnings and updated GET/sensors
